--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							Graduated from Computer Science helped me to work in software development.
-							Experienced mobile developer proven by some applications landed on play store and app store.
-							Passionate in mobile development, able to write in Java, Kotlin, and currently focusing on
-							Flutter.
+							Experienced mobile developer with over 4 years of experience and a client-oriented approach.
+							Skilled in Kotlin, Java, and focus on Flutter. Completed multiple projects for startup,
+							government, agencies, and banks. Ready to work remotely. If you're looking for a mobile
+							developer who is dedicated to delivering high-quality work that meets your needs, look no
+							further. Let's connect and discuss how I can help you.
 						</p>
 					</div>
 					<a href="https://www.linkedin.com/in/adamnain/" class="primary-btn white" data-text="More Info">
@@ -201,6 +202,33 @@
 
 			<div class="filters-content">
 				<div class="row grid">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all mobile wow fadeInUp" data-wow-duration="2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/w21.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>Truest - HR App</h4>
+								<div class="cat">Flutter</div>
+							</div>
+							<a class="overlay" href="https://apps.apple.com/id/app/truest/id6476389232?l=id"
+								target="_blank"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all mobile wow fadeInUp" data-wow-duration="2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/w20.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>Booking App</h4>
+								<div class="cat">Flutter</div>
+							</div>
+							<a class="overlay" href="" target="_blank"></a>
+						</div>
+					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all mobile wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
